Removed unused cell at the end, and added textual desc for ml clustering

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -2850,148 +2850,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It's not a great success.\n",
+    "It's not a great success. We dont have in each cluster only review with same score, but a mix. TF-IDF is unstable for such short document lengths.\n",
     "\n",
-    "##### Select only numeric data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "802"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "playstation_numeric_reviews = most_reviewed_reviews._get_numeric_data().dropna()\n",
-    "len(playstation_numeric_reviews)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### PCA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PCA1</th>\n",
-       "      <th>PCA2</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>reviewerID</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>A2CLZBE0EJWJXX</th>\n",
-       "      <td>-4.938026</td>\n",
-       "      <td>0.584427</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ABY5Z7DYBIQWS</th>\n",
-       "      <td>-9.938051</td>\n",
-       "      <td>0.560867</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AD0SJOW5Z2VM6</th>\n",
-       "      <td>33.064475</td>\n",
-       "      <td>-0.290210</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AOWO3CTZLNXYS</th>\n",
-       "      <td>-9.938051</td>\n",
-       "      <td>0.560867</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>A3FXV9BW1KUQ7H</th>\n",
-       "      <td>13.072103</td>\n",
-       "      <td>-3.334095</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     PCA1      PCA2\n",
-       "reviewerID                         \n",
-       "A2CLZBE0EJWJXX  -4.938026  0.584427\n",
-       "ABY5Z7DYBIQWS   -9.938051  0.560867\n",
-       "AD0SJOW5Z2VM6   33.064475 -0.290210\n",
-       "AOWO3CTZLNXYS   -9.938051  0.560867\n",
-       "A3FXV9BW1KUQ7H  13.072103 -3.334095"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.decomposition import PCA\n",
-    "n_components = 2\n",
-    "\n",
-    "pca = PCA(n_components=n_components)\n",
-    "pca.fit(playstation_numeric_reviews)\n",
-    "pca_result = pd.DataFrame(pca.transform(playstation_numeric_reviews), columns=['PCA%i' % (i+1) for i in range(n_components)], index=playstation_numeric_reviews.index)\n",
-    "pca_result.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXYAAAD8CAYAAABjAo9vAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEzJJREFUeJzt3X9sXXd9xvHnieuW21IwWVwgToOzEBkVCg2zoFmmrSsw\nB6iarBOiqB1UbI32BxKsyCghiIHG1jJPgCbQUEbZ2Mja8SM1VVtk0rUIMa0Fp06btKlpSwvtTVmM\nkCk/LtRxPvvjHhfH2PGPc67vPV+/X5KVe8+9PudxGz/+5nu+PscRIQBAOlY1OwAAoFgUOwAkhmIH\ngMRQ7ACQGIodABJDsQNAYih2AEgMxQ4AiaHYASAxZzTjoGvWrInu7u5mHBoASuvgwYM/jojO+d7X\nlGLv7u7W8PBwMw4NAKVl+wcLeR9TMQCQGIodABJDsQNAYih2AEgMxQ4AiaHYASAxTVnuCAArzeBI\nVQNDozo2XtPajor6+3q0Y3NXQ45FsQNAgw2OVLV7/2HVJiYlSdXxmnbvPyxJDSl3pmIAoMEGhkaf\nK/UptYlJDQyNNuR4FDsANNix8dqitudVWLHbbrM9Yvu2ovYJAClY21FZ1Pa8ihyxv1fS0QL3BwBJ\n6O/rUaW97ZRtlfY29ff1NOR4hRS77XWS3irpc0XsDwBSsmNzl66/4kJ1dVRkSV0dFV1/xYUtvyrm\nU5I+IOncgvYHAEnZsbmrYUU+U+4Ru+3LJB2PiIPzvG+n7WHbw2NjY3kPCwCYQxFTMVslXW77CUk3\nS7rU9hdnviki9kZEb0T0dnbOe514AMAS5S72iNgdEesiolvSlZLuioircycDACwJ69gBIDGFXlIg\nIr4p6ZtF7hMAsDiM2AEgMRQ7ACSGYgeAxFDsAJAYih0AEkOxA0BiKHYASAzFDgCJodgBIDEUOwAk\nhmIHgMRQ7ACQGIodABJDsQNAYih2AEgMxQ4AiaHYASAxuYvd9vNsf8f2/bYftP3RIoIBAJamiFvj\n/VrSpRHxc9vtkr5t++sRcU8B+wYALFLuYo+IkPTz7Gl79hF59wsAWJpC5thtt9k+JOm4pAMRce8s\n79lpe9j28NjYWBGHBQDMopBij4jJiLhI0jpJr7P9qlneszcieiOit7Ozs4jDAgBmUeiqmIgYl3S3\npG1F7hcAsHBFrIrptN2RPa5IepOkh/PuFwCwNEWsinmppC/YblP9B8WXIuK2AvYLAFiCIlbFPCBp\ncwFZAAAF4DdPASAxFDsAJIZiB4DEUOwAkBiKHQASQ7EDQGIodgBIDMUOAImh2AEgMRQ7ACSGYgeA\nxFDsAJAYih0AEkOxA0BiKHYASAzFDgCJodgBIDFF3PP0fNt3237I9oO231tEMADA0hRxz9MTkt4f\nEffZPlfSQdsHIuKhAvYNAFik3CP2iHg6Iu7LHv9M0lFJXXn3CwBYmkLn2G13q35j63tneW2n7WHb\nw2NjY0UeFgAwTWHFbvv5kr4q6X0R8czM1yNib0T0RkRvZ2dnUYcFAMxQSLHbble91PdFxP4i9gkA\nWJoiVsVY0o2SjkbEJ/JHAgDkUcSIfaukP5d0qe1D2cdbCtgvAGAJci93jIhvS3IBWQAABeA3TwEg\nMRQ7ACSGYgeAxFDsAJAYih0AEkOxA0BiKHYASAzFDgCJodgBIDEUOwAkhmIHgMRQ7ACQGIodABJD\nsQNAYih2AEhM7uuxo25wpKqBoVEdG69pbUdF/X092rG5q9mxAKxARd3z9PO2j9s+UsT+ymZwpKrd\n+w+rOl5TSKqO17R7/2ENjlSbHQ3AClTUVMy/SdpW0L5KZ2BoVLWJyVO21SYmNTA02qREAFayQoo9\nIr4l6SdF7KuMjo3XFrUdABqJk6cFWNtRWdR2AGikZSt22zttD9seHhsbW67DLsrgSFVbb7hLG3bd\nrq033LXgOfL+vh5V2ttO2VZpb1N/X08jYgLAaS1bsUfE3ojojYjezs7O5TrsguU5Abpjc5euv+JC\ndXVUZEldHRVdf8WFrIoB0BQrbrnjXMsST3cCdCEFvWNzF0UOoCUUUuy2b5J0iaQ1tp+S9DcRcWMR\n+y7S1Kh8qsCnRuUSJ0ABpKOQYo+IdxSxn0Y73ah8bUdF1VlKnBOgAMqm9FMxgyNVXfelQzoZs7/e\nUWnXRy5/pXZs7jrtqPyTb7/olNG8xAlQAOVUumL/0OBhffGeHy74/eO1CfV/+X5JOu2ofGp+nMsC\nACi70hR7967bl/y5EydDA0Oj6u/rOe2onBOgAFJQimLPU+pTjo3XGJUDWBFKUexFmDoJyqgcQOpW\nxCUF2leZk6AAVozki72j0q6Bt72GUTqAFSO5qZitG1dr37Vbmh0DAJommWKfvl4dAFayJIr9iRve\n2uwIANAySj/HTqkDwKlKUexzlTelDgC/rTRTMZQ4ACxMKUbsAICFo9gBIDEUOwAkhmIHgMQUUuy2\nt9ketf2o7V1F7BMAsDS5i912m6TPSHqzpAskvcP2BXn3CwBYmiJG7K+T9GhEfD8inpV0s6TtBewX\nALAERRR7l6Qnpz1/KtsGAGiCZTt5anun7WHbw2NjY8t1WABYcYoo9qqk86c9X5dtO0VE7I2I3ojo\n7ezsLOCwAIDZFFHs35W0yfYG22dKulLSrQXsFwCwBLmvFRMRJ2y/R9KQpDZJn4+IB3MnK8jgSJWb\nVwNYUQq5CFhE3CHpjiL2ldeHBg/rpnuf1GSEbMmSTkb9tep4Tbv3H5Ykyh1Askpzdce5TI3Iq+M1\nWVJMey3i1OeSVJuY1MDQKMUOIFmlKvZX7LlDv5qcWdW/Mfcrpzo2XismEAC0oNIUe/eu2wvb19qO\nSmH7AoBWU4qLgL18d3GlXmlvU39fT2H7A4BWU4oR+4mFzrHM4ez2VapNnGRVDIAVoRTFvlS2dNXr\n1+tjOy5sdhQAWDZJFnsXI3MAK1gyxW5Jj3PDawAox8nT+bzgrDZKHQAypS/2qy9erwc+uq3ZMQCg\nZZSi2Dedd86c2zkxCgCnKkWxH7jukt8q903nnaMD113SnEAA0MJKc/KUEgeAhSnFiB0AsHAUOwAk\nhmIHgMRQ7ACQmFzFbvttth+0fdJ2b1GhAABLl3fEfkTSFZK+VUAWAEABci13jIijkmS7mDQAgNyY\nYweAxMw7Yrd9p6SXzPLSnoj42kIPZHunpJ2StH79+gUHBAAszrzFHhFvLOJAEbFX0l5J6u3tzXlP\nJADAXJiKAYDE5F3u+Ke2n5K0RdLttoeKiQUAWKq8q2JukXRLQVkAAAVgKgYAElOay/ZK0uBIVXtu\nOaxfPDs56+sdlXZ95PJXchNrACtaaYp9cKSq9/3XodO+Z7w2of4v3y9JlDuAFas0UzHzlfqUiZOh\ngaHRBqcBgNZVimIfHKku6v3HxmsNSgIAra8Uxb7YEfjajkqDkgBA6ytFsVcXMQJvX2X19/U0MA0A\ntLZSFHvbAq8euUrSwNtew4lTACtaKVbFTMb8l5bZunG19l27ZRnSAEBrK0Wxd3VU5pyO+dTbL2KE\nDgDTlGIqpr+vR5X2tlO2VdrbKHUAmEUpRuxT5T0wNKpj4zWt7aiov6+HUgeAWZSi2KV6uVPkADC/\nUkzFAAAWjmIHgMRQ7ACQGIodABKT99Z4A7Yftv2A7VtsdxQVDACwNHlH7AckvSoiXi3pe5J2548E\nAMgjV7FHxDci4kT29B5J6/JHAgDkUeQc+7slfb3A/QEAlmDeX1Cyfaekl8zy0p6I+Fr2nj2STkja\nd5r97JS0U5LWr1+/pLAAgPnNW+wR8cbTvW77GkmXSXpDxNyXYYyIvZL2SlJvb+/8l2sEACxJrksK\n2N4m6QOS/igifllMJABAHnnn2D8t6VxJB2wfsv3ZAjIBAHLINWKPiJcXFQQAUIzSXN1xNoMjVQ0M\njao6XlObrckIdXFJXwArXCmLfXCkqg/uf0C/nDj53Lap2+dVx2vavf+wJFHuAFak0hX7K/bcoV9N\nnn5RTW1iUgNDoxQ7gBWpNBcBGxypqnvX7fOW+pRjc9wjFQBSV4piHxypPje9slBrOyoNSgMAra0U\nxT4wNKraxOSiPqe/r6dBaQCgtZWi2Bc7rbJ142rm1wGsWKUo9oVOq1jS1Rev175rtzQ2EAC0sFKs\niunv69Hu/YfnnI45u32V/v6KVzNKBwCVpNinCntgaFTHxmtayy8hAcCcSlHsUr3cKXIAmF8p5tgB\nAAtHsQNAYih2AEgMxQ4AiaHYASAxpVkVUxZT14hnWSaAZsl7z9O/lbRd0klJxyVdExHHighWRlMX\nK5v6RSquDQ+gGfJOxQxExKsj4iJJt0n6cAGZSmu2i5VNXRseAJZLrmKPiGemPT1H0sIulp6ouS5W\nxrXhASyn3HPstv9O0jsl/VTSH5/mfTsl7ZSk9evX5z1sS1rbUVF1lhLn2vAAltO8I3bbd9o+MsvH\ndkmKiD0Rcb6kfZLeM9d+ImJvRPRGRG9nZ2dxX0EOgyNVbb3hLm3Ydbu23nCXBkequfbX39ejSnvb\nKdsq7W1cGx7AsnJEMbMnttdLuiMiXjXfe3t7e2N4eLiQ4y7VzBOdUv2yv1ddvF4f23Fhrv2yKgZA\nI9g+GBG9870v76qYTRHxSPZ0u6SH8+yv0aaX7ipbkzN+qIWkfff8UL0vW/qNOrhYGYBmyzvHfoPt\nHtWXO/5A0l/lj1SMwZGqPnLrgxqvTUiSzjpjlX594uRzr88s9Smh+uoWyhlAWeUq9oj4s6KC5DWz\nyGeaXurzYRULgDIr7W+eDo5U1f/lQ5pYeF8vGKtYAJRZ6Yq9kYUusYoFQPmVqtjf9Ilv6pHjvyhs\nf1OrYO5+eIxVLACSUZpiv+pf/rchpZ5naSMAtKLSFPv/PPaTXJ9vSS+stOuntQlG5gCSVppiz2Pr\nxtXad+2WZscAgGWRdLFvOu8cHbjukmbHAIBllVyx29JVr2fuHMDKVZpi37px9azz7EyzAMCpSnPP\n033XbtHWjatP2UapA8BvK82IXRIlDgALUJoROwBgYSh2AEgMxQ4AiaHYASAxFDsAJKawe54u6qD2\nmOp3XMpjjaQfFxBnOZC1eGXJKZUna1lySuXJWnTOl0VE53xvakqxF8H28EJu6toKyFq8suSUypO1\nLDml8mRtVk6mYgAgMRQ7ACSmzMW+t9kBFoGsxStLTqk8WcuSUypP1qbkLO0cOwBgdmUesQMAZlHK\nYre9zfao7Udt72pylvNt3237IdsP2n5vtn217QO2H8n+fNG0z9mdZR+13bfMedtsj9i+rcVzdtj+\niu2HbR+1vaWFs/519v/+iO2bbD+vVbLa/rzt47aPTNu26Gy2f8/24ey1f7LtZcg5kP3/f8D2LbY7\nmp1zrqzTXnu/7bC9pqlZI6JUH5LaJD0m6XclnSnpfkkXNDHPSyW9Nnt8rqTvSbpA0j9I2pVt3yXp\n49njC7LMZ0nakH0tbcuY9zpJ/ynptux5q+b8gqS/zB6fKamjFbNK6pL0uKRK9vxLkq5playS/lDS\nayUdmbZt0dkkfUfSxarfPvjrkt68DDn/RNIZ2eOPt0LOubJm28+XNKT67+isaWbWMo7YXyfp0Yj4\nfkQ8K+lmSdubFSYino6I+7LHP5N0VPVv9u2ql5OyP3dkj7dLujkifh0Rj0t6VPWvqeFsr5P0Vkmf\nm7a5FXO+UPVvnhslKSKejYjxVsyaOUNSxfYZks6WdKxVskbEtyTNvEPNorLZfqmkF0TEPVFvpH+f\n9jkNyxkR34iIE9nTeySta3bOubJmPinpA5Kmn7hsStYyFnuXpCenPX8q29Z0trslbZZ0r6QXR8TT\n2Us/kvTi7HEz839K9b94J6dta8WcGySNSfrXbNroc7bPacWsEVGV9I+SfijpaUk/jYhvtGLWaRab\nrSt7PHP7cnq36qNaqQVz2t4uqRoR9894qSlZy1jsLcn28yV9VdL7IuKZ6a9lP5GbuvzI9mWSjkfE\nwbne0wo5M2eo/k/df46IzZJ+ofqUwXNaJWs2P71d9R9GayWdY/vq6e9playzaeVsU2zvkXRC0r5m\nZ5mN7bMlfVDSh5udZUoZi72q+lzWlHXZtqax3a56qe+LiP3Z5v/L/rml7M/j2fZm5d8q6XLbT6g+\nfXWp7S+2YE6pPnp5KiLuzZ5/RfWib8Wsb5T0eESMRcSEpP2Sfr9Fs05ZbLaqfjMNMn17w9m+RtJl\nkq7KfghJrZdzo+o/2O/Pvr/WSbrP9kualbWMxf5dSZtsb7B9pqQrJd3arDDZmewbJR2NiE9Me+lW\nSe/KHr9L0tembb/S9lm2N0japPpJlIaKiN0RsS4iulX/b3ZXRFzdajmzrD+S9KTtnmzTGyQ91IpZ\nVZ+Cudj22dnfhTeofp6lFbNOWVS2bNrmGdsXZ1/jO6d9TsPY3qb61OHlEfHLGflbJmdEHI6I8yKi\nO/v+ekr1BRU/alrWos8YL8eHpLeovvrkMUl7mpzlD1T/p+wDkg5lH2+R9DuS/lvSI5LulLR62ufs\nybKPqgFn7ReQ+RL9ZlVMS+aUdJGk4ey/66CkF7Vw1o9KeljSEUn/ofoKiJbIKukm1ef+J1QvnL9Y\nSjZJvdnX95ikTyv75cYG53xU9fnpqe+rzzY751xZZ7z+hLJVMc3Kym+eAkBiyjgVAwA4DYodABJD\nsQNAYih2AEgMxQ4AiaHYASAxFDsAJIZiB4DE/D8da9TjiJss/gAAAABJRU5ErkJggg==\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x286e3f2e470>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "plt.scatter(pca_result.PCA1, pca_result.PCA2)\n",
-    "plt.show()"
+    "For milestone 3, we will use the StarSpace embeddings instead of TF-IDF."
    ]
   },
   {
