--- a/Similar products.ipynb
+++ b/Similar products.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "           A361M14PU2GUEG                28.0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        "4   NaN  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
        "45933   NaN  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
        "47181  {'Video Games': 102}   NaN  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
        "45935  {'Video Games': 478}   NaN  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +874,7 @@
        "47179   NaN  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,8 +891,8 @@
    "source": [
     "Seems like most of the related products are games for Playstation or accessories.\n",
     "\n",
-    "#### K-nn\n",
-    "We can try to use a KNN method to find similar product. However, there is only the price column that is a number.  \n",
+    "#### NearestNeighbors\n",
+    "We can try to use a NearestNeighbors method to find similar product. However, there is only the price column that is a number.  \n",
     "\n",
     "##### Categories\n",
     "We transform the categories to a one hot encoding format.  \n",
@@ -907,61 +907,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Video Games',\n",
-       " 'Xbox 360',\n",
-       " 'Games',\n",
-       " 'Video Games',\n",
-       " 'PC',\n",
-       " 'Games',\n",
-       " 'Video Games',\n",
-       " 'PC',\n",
-       " 'Games',\n",
-       " 'Video Games']"
+       "['Docking Stations',\n",
+       " 'Bag Gloves',\n",
+       " 'Basketball Equipment',\n",
+       " 'Martial Arts',\n",
+       " 'Coffee Makers',\n",
+       " 'Music Creation & Sequencing',\n",
+       " 'Airsoft, Air Guns & Slingshots',\n",
+       " 'Word Processing',\n",
+       " 'Design & Illustration',\n",
+       " 'Boating & Water Sports']"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "flat_list_categories = [item for sublist in video_games_meta.categories.values for item in sublist]\n",
-    "flat_list_categories = [item for sublist in flat_list_categories for item in sublist]\n",
-    "\n",
+    "flat_list_categories = [item for sublist in video_games_meta.categories.values for item in sublist] # Flatten the list of categories\n",
+    "flat_list_categories = [item for sublist in flat_list_categories for item in sublist] # Flatten the categories, subcategories etc..\n",
+    "flat_list_categories = list(set(flat_list_categories)) # Remove duplicates\n",
     "flat_list_categories[:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LabelEncoder()"
-      ]
-     },
-     "execution_count": 132,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn import preprocessing\n",
-    "le = preprocessing.LabelEncoder()\n",
-    "le.fit(flat_list_categories)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -973,57 +951,263 @@
     }
    ],
    "source": [
-    "print(\"We get\", len(le.classes_), \"number of categories\")"
+    "print(\"We get\", len(flat_list_categories), \"number of categories\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OneHotEncoder(categorical_features='all', dtype=<class 'numpy.float64'>,\n",
+       "       handle_unknown='error', n_values='auto', sparse=True)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn import preprocessing\n",
+    "label_encoder = preprocessing.LabelEncoder()\n",
+    "\n",
+    "# Encode category string to number\n",
+    "label_encoder.fit(flat_list_categories)\n",
+    "categories = label_encoder.transform(flat_list_categories)\n",
+    "\n",
+    "# Encode to one hot\n",
+    "on_hot_encoder = OneHotEncoder()\n",
+    "on_hot_encoder.fit([[cat] for cat in categories])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The one hot encoding for the 223 category\n",
+    "on_hot = np.asarray(on_hot_encoder.transform(223).todense()).reshape(-1)\n",
+    "on_hot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 / 43905\n",
+      "4000 / 43905\n",
+      "5000 / 43905\n",
+      "6000 / 43905\n",
+      "7000 / 43905\n",
+      "8000 / 43905\n",
+      "10000 / 43905\n",
+      "11000 / 43905\n",
+      "12000 / 43905\n",
+      "14000 / 43905\n",
+      "16000 / 43905\n",
+      "18000 / 43905\n",
+      "20000 / 43905\n",
+      "22000 / 43905\n",
+      "23000 / 43905\n",
+      "24000 / 43905\n",
+      "25000 / 43905\n",
+      "26000 / 43905\n",
+      "28000 / 43905\n",
+      "29000 / 43905\n",
+      "30000 / 43905\n",
+      "31000 / 43905\n",
+      "32000 / 43905\n",
+      "33000 / 43905\n",
+      "34000 / 43905\n",
+      "35000 / 43905\n",
+      "36000 / 43905\n",
+      "37000 / 43905\n",
+      "39000 / 43905\n",
+      "40000 / 43905\n",
+      "41000 / 43905\n",
+      "42000 / 43905\n",
+      "43000 / 43905\n",
+      "44000 / 43905\n",
+      "45000 / 43905\n",
+      "46000 / 43905\n",
+      "47000 / 43905\n",
+      "48000 / 43905\n",
+      "49000 / 43905\n",
+      "50000 / 43905\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a list of products with onhot category and price features\n",
+    "def get_features_from_product_metadata(product):\n",
+    "    categories_labels = []\n",
+    "    for category_list in product.categories:\n",
+    "        categories_labels = np.concatenate([categories_labels, label_encoder.transform(category_list)])\n",
+    "    \n",
+    "    categories_one_hot = np.zeros(468) # 468 categories\n",
+    "    for cat_label in categories_labels:\n",
+    "        categories_one_hot = categories_one_hot + on_hot_encoder.transform(cat_label)\n",
+    "        \n",
+    "    features = list(np.asarray(categories_one_hot[0])[0]) # Categories features\n",
+    "    features.append(product.price) # Add price feature\n",
+    "    return features\n",
+    "\n",
+    "video_games_meta_dropped_price_nan = video_games_meta[np.isfinite(video_games_meta['price'])]\n",
+    "\n",
+    "X = []\n",
+    "X_asin = []\n",
+    "for i, product in video_games_meta_dropped_price_nan.iterrows():\n",
+    "    features = get_features_from_product_metadata(product)\n",
+    "    \n",
+    "    X.append(features)\n",
+    "    X_asin.append(product.asin)\n",
+    "    \n",
+    "    if i % 1000 == 0:\n",
+    "        print(i,\"/\",len(video_games_meta_dropped_price_nan))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "category = le.transform(['Electronics', 'Television & Video', 'Blu-ray Players & Recorders'])"
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "import numpy as np\n",
+    "nbrs = NearestNeighbors(n_neighbors=2, algorithm='ball_tree').fit(X)\n",
+    "distances, indices = nbrs.kneighbors([get_features_from_product_metadata(playstation.squeeze())])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([155, 417,  53], dtype=int64)"
+       "array([[ 0.        ,  4.90192819]])"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "category"
+    "distances"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ list([['Electronics', 'Television & Video', 'Blu-ray Players & Recorders'], ['Electronics', 'Television & Video', 'DVD Players & Recorders', 'DVD Players'], ['Electronics', 'Television & Video', 'Streaming Media Players'], ['Video Games', 'PlayStation 4', 'Consoles']])], dtype=object)"
+       "array([[39274, 11281]], dtype=int64)"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "playstation.categories.values"
+    "indices"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'B000930DOG'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_asin[11281]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
