Add textual desc to similar product

--- a/Similar products.ipynb
+++ b/Similar products.ipynb
@@ -13,13 +13,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import warnings\n",
+    "% matplotlib inline\n",
     "import pickle\n",
-    "from datetime import datetime\n",
-    "from matplotlib import pyplot as plt\n"
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.neighbors import NearestNeighbors\n"
    ]
   },
   {
@@ -913,16 +912,16 @@
     {
      "data": {
       "text/plain": [
-       "['Docking Stations',\n",
-       " 'Bag Gloves',\n",
-       " 'Basketball Equipment',\n",
-       " 'Martial Arts',\n",
-       " 'Coffee Makers',\n",
-       " 'Music Creation & Sequencing',\n",
-       " 'Airsoft, Air Guns & Slingshots',\n",
+       "['Linux & Unix',\n",
+       " 'Trading Card Games',\n",
+       " 'Computer Components',\n",
+       " 'Microphones',\n",
+       " 'Encyclopedias',\n",
        " 'Word Processing',\n",
-       " 'Design & Illustration',\n",
-       " 'Boating & Water Sports']"
+       " 'Database',\n",
+       " 'PC',\n",
+       " 'Home Office Furniture',\n",
+       " 'Rackets']"
       ]
      },
      "execution_count": 9,
@@ -1044,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1094,6 @@
     }
    ],
    "source": [
-    "# Create a list of products with onhot category and price features\n",
     "def get_features_from_product_metadata(product):\n",
     "    categories_labels = []\n",
     "    for category_list in product.categories:\n",
@@ -1109,6 +1107,8 @@
     "    features.append(product.price) # Add price feature\n",
     "    return features\n",
     "\n",
+    "# Create a list of products with onehot category and price features\n",
+    "\n",
     "video_games_meta_dropped_price_nan = video_games_meta[np.isfinite(video_games_meta['price'])]\n",
     "\n",
     "X = []\n",
@@ -1120,94 +1120,223 @@
     "    X_asin.append(product.asin)\n",
     "    \n",
     "    if i % 1000 == 0:\n",
-    "        print(i,\"/\",len(video_games_meta_dropped_price_nan))\n"
+    "        print(i,\"/\",len(video_games_meta_dropped_price_nan))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now can use these products representation to find the nearest neighbors for a given product"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Return the indices of neighbors products\n",
+    "def get_nearest_neighbors_product(product, X, n_neighbors=2):\n",
+    "    nbrs = NearestNeighbors(n_neighbors=n_neighbors, algorithm='ball_tree').fit(X)\n",
+    "    distances, indices = nbrs.kneighbors([get_features_from_product_metadata(product.squeeze())])\n",
+    "    return indices[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indices = get_nearest_neighbors_product(playstation, X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>asin</th>\n",
+       "      <th>brand</th>\n",
+       "      <th>categories</th>\n",
+       "      <th>description</th>\n",
+       "      <th>imUrl</th>\n",
+       "      <th>price</th>\n",
+       "      <th>related</th>\n",
+       "      <th>salesRank</th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>14094</th>\n",
+       "      <td>B000930DOG</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[[Video Games]]</td>\n",
+       "      <td>The year is 1963. Your name is Bond, James Bon...</td>\n",
+       "      <td>http://ecx.images-amazon.com/images/I/515YPQDX...</td>\n",
+       "      <td>27.95</td>\n",
+       "      <td>{'also_bought': ['B00009X3V2', 'B00005V3EX', '...</td>\n",
+       "      <td>{'Video Games': 22785}</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             asin brand       categories  \\\n",
+       "14094  B000930DOG   NaN  [[Video Games]]   \n",
+       "\n",
+       "                                             description  \\\n",
+       "14094  The year is 1963. Your name is Bond, James Bon...   \n",
+       "\n",
+       "                                                   imUrl  price  \\\n",
+       "14094  http://ecx.images-amazon.com/images/I/515YPQDX...  27.95   \n",
+       "\n",
+       "                                                 related  \\\n",
+       "14094  {'also_bought': ['B00009X3V2', 'B00005V3EX', '...   \n",
+       "\n",
+       "                    salesRank title  \n",
+       "14094  {'Video Games': 22785}   NaN  "
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "video_games_meta[video_games_meta.asin == X_asin[indices[1]]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The similar product obtained for the playstation console is a James bond game. We would expect to get a similar console. This is due to the playstation price of $28.12, which is probably a mistake.\n",
+    "\n",
+    "We try it on a Xbox game :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xbox_game = video_games_meta.iloc[0]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.neighbors import NearestNeighbors\n",
-    "import numpy as np\n",
-    "nbrs = NearestNeighbors(n_neighbors=2, algorithm='ball_tree').fit(X)\n",
-    "distances, indices = nbrs.kneighbors([get_features_from_product_metadata(playstation.squeeze())])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>asin</th>\n",
+       "      <th>brand</th>\n",
+       "      <th>categories</th>\n",
+       "      <th>description</th>\n",
+       "      <th>imUrl</th>\n",
+       "      <th>price</th>\n",
+       "      <th>related</th>\n",
+       "      <th>salesRank</th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>24292</th>\n",
+       "      <td>B00175GC4U</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[[Video Games, Xbox 360, Games]]</td>\n",
+       "      <td>The Number One fighting game franchise in the ...</td>\n",
+       "      <td>http://ecx.images-amazon.com/images/I/51yZJeFK...</td>\n",
+       "      <td>37.99</td>\n",
+       "      <td>{'also_bought': ['B000FW8FK0', 'B002E1SBVS', '...</td>\n",
+       "      <td>{'Video Games': 12736}</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([[ 0.        ,  4.90192819]])"
+       "             asin brand                        categories  \\\n",
+       "24292  B00175GC4U   NaN  [[Video Games, Xbox 360, Games]]   \n",
+       "\n",
+       "                                             description  \\\n",
+       "24292  The Number One fighting game franchise in the ...   \n",
+       "\n",
+       "                                                   imUrl  price  \\\n",
+       "24292  http://ecx.images-amazon.com/images/I/51yZJeFK...  37.99   \n",
+       "\n",
+       "                                                 related  \\\n",
+       "24292  {'also_bought': ['B000FW8FK0', 'B002E1SBVS', '...   \n",
+       "\n",
+       "                    salesRank title  \n",
+       "24292  {'Video Games': 12736}   NaN  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "distances"
+    "indices = get_nearest_neighbors_product(xbox_game, X)\n",
+    "video_games_meta[video_games_meta.asin == X_asin[indices[1]]]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 44,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[39274, 11281]], dtype=int64)"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "indices"
+    "We get a similar product, which stay in the same category \"Xbox360 games\"."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'B000930DOG'"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_asin[11281]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1244,5 +1373,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 1
 }
